// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calls out live ballot sheets in test mode 1`] = `
<div>
  <div
    class="sc-dQppl CqIxD"
  >
    <div
      class="sc-gKsewC eUhhMQ"
    >
      <div
        class="sc-iBPRYJ hPAooK"
      >
        <div
          class="sc-fubCfw hAIFcM"
        >
          <div
            class="sc-pFZIQ Korzq"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-jrAGrp"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-kEjbxe eDKgHQ"
        >
          <button
            class="sc-gsTCUz bQMNvi"
            type="button"
          >
            Confirm Ballot Removed and Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-eCssSg jJQcwm"
    >
      <div
        class="sc-hHftDr hXZiDL"
      >
        <div
          class="sc-crrsfI dvOODA"
        >
          <div
            class="sc-dIUggk hZaEGa"
          >
            Live Ballot
          </div>
          <p>
            This last scanned sheet 
            <strong>
              was not tabulated
            </strong>
            .
          </p>
          <p>
            Remove the LIVE ballot before continuing.
          </p>
        </div>
        <div
          class="sc-dmlrTW esDPKT"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-kstrdz kvxcls"
    >
      <div
        class="sc-bqyKva kbFFdu"
      >
        Scanner ID: 
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-bqyKva kbFFdu"
      >
        <strong>
          General Election
        </strong>
         — 
        Tuesday, November 3, 2020
         
        — 
        Franklin County
        ,
         
        State of Hamilton
         
        — Election Hash:
         
        <strong>
          2f6b1553c7
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`calls out test ballot sheets in live mode 1`] = `
<div>
  <div
    class="sc-dQppl CqIxD"
  >
    <div
      class="sc-gKsewC eUhhMQ"
    >
      <div
        class="sc-iBPRYJ hPAooK"
      >
        <div
          class="sc-fubCfw hAIFcM"
        >
          <div
            class="sc-pFZIQ Korzq"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-jrAGrp"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-kEjbxe eDKgHQ"
        >
          <button
            class="sc-gsTCUz bQMNvi"
            type="button"
          >
            Confirm Ballot Removed and Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-eCssSg jJQcwm"
    >
      <div
        class="sc-hHftDr hXZiDL"
      >
        <div
          class="sc-crrsfI dvOODA"
        >
          <div
            class="sc-dIUggk hZaEGa"
          >
            Test Ballot
          </div>
          <p>
            This last scanned sheet 
            <strong>
              was not tabulated
            </strong>
            .
          </p>
          <p>
            Remove the TEST ballot before continuing.
          </p>
        </div>
        <div
          class="sc-dmlrTW esDPKT"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-kstrdz kvxcls"
    >
      <div
        class="sc-bqyKva kbFFdu"
      >
        Scanner ID: 
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-bqyKva kbFFdu"
      >
        <strong>
          General Election
        </strong>
         — 
        Tuesday, November 3, 2020
         
        — 
        Franklin County
        ,
         
        State of Hamilton
         
        — Election Hash:
         
        <strong>
          2f6b1553c7
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the ballot sheet is blank if it is 1`] = `
<div>
  <div
    class="sc-dQppl CqIxD"
  >
    <div
      class="sc-gKsewC eUhhMQ"
    >
      <div
        class="sc-iBPRYJ hPAooK"
      >
        <div
          class="sc-fubCfw hAIFcM"
        >
          <div
            class="sc-pFZIQ Korzq"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-jrAGrp"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-kEjbxe eDKgHQ"
        >
          <button
            class="sc-gsTCUz iulVCQ"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-eCssSg jJQcwm"
    >
      <div
        class="sc-hHftDr hXZiDL"
      >
        <div
          class="sc-crrsfI dvOODA"
        >
          <div
            class="sc-dIUggk hZaEGa"
          >
            Blank Ballot
          </div>
          <p>
            This last scanned sheet 
            <strong>
              was not tabulated
            </strong>
            .
          </p>
          <h4>
            Original Ballot Scan
          </h4>
          <p>
            Remove ballot and create a duplicate ballot for the Resolution Board to review.
            <br />
            <button
              class="sc-gsTCUz ftrorQ"
              type="button"
            >
              Original Ballot Removed
            </button>
          </p>
          <h4>
            Duplicate Ballot Scan
          </h4>
          <p>
            Confirm ballot sheet was reviewed by the Resolution Board and tabulate as a 
            <strong>
              blank
            </strong>
             ballot sheet and has no votes.
            <br />
            <button
              class="sc-gsTCUz ftrorQ"
              type="button"
            >
              Tabulate Duplicate Ballot
            </button>
          </p>
        </div>
        <div
          class="sc-dmlrTW esDPKT"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-kstrdz kvxcls"
    >
      <div
        class="sc-bqyKva kbFFdu"
      >
        Scanner ID: 
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-bqyKva kbFFdu"
      >
        <strong>
          General Election
        </strong>
         — 
        Tuesday, November 3, 2020
         
        — 
        Franklin County
        ,
         
        State of Hamilton
         
        — Election Hash:
         
        <strong>
          2f6b1553c7
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the ballot sheet is overvoted if it is 1`] = `
<div>
  <div
    class="sc-dQppl CqIxD"
  >
    <div
      class="sc-gKsewC eUhhMQ"
    >
      <div
        class="sc-iBPRYJ hPAooK"
      >
        <div
          class="sc-fubCfw hAIFcM"
        >
          <div
            class="sc-pFZIQ Korzq"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-jrAGrp"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-kEjbxe eDKgHQ"
        >
          <button
            class="sc-gsTCUz iulVCQ"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-eCssSg jJQcwm"
    >
      <div
        class="sc-hHftDr hXZiDL"
      >
        <div
          class="sc-crrsfI dvOODA"
        >
          <div
            class="sc-dIUggk hZaEGa"
          >
            Overvote
          </div>
          <p>
            This last scanned sheet 
            <strong>
              was not tabulated
            </strong>
            .
          </p>
          <h4>
            Original Ballot Scan
          </h4>
          <p>
            Remove ballot and create a duplicate ballot for the Resolution Board to review.
            <br />
            <button
              class="sc-gsTCUz ftrorQ"
              type="button"
            >
              Original Ballot Removed
            </button>
          </p>
          <h4>
            Duplicate Ballot Scan
          </h4>
          <p>
            Confirm ballot sheet was reviewed by the Resolution Board and tabulate as ballot sheet with an
             
            <strong>
              overvote
            </strong>
            .
            <br />
            <button
              class="sc-gsTCUz ftrorQ"
              type="button"
            >
              Tabulate Duplicate Ballot
            </button>
          </p>
        </div>
        <div
          class="sc-dmlrTW esDPKT"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-kstrdz kvxcls"
    >
      <div
        class="sc-bqyKva kbFFdu"
      >
        Scanner ID: 
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-bqyKva kbFFdu"
      >
        <strong>
          General Election
        </strong>
         — 
        Tuesday, November 3, 2020
         
        — 
        Franklin County
        ,
         
        State of Hamilton
         
        — Election Hash:
         
        <strong>
          2f6b1553c7
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the ballot sheet is undervoted if it is 1`] = `
<div>
  <div
    class="sc-dQppl CqIxD"
  >
    <div
      class="sc-gKsewC eUhhMQ"
    >
      <div
        class="sc-iBPRYJ hPAooK"
      >
        <div
          class="sc-fubCfw hAIFcM"
        >
          <div
            class="sc-pFZIQ Korzq"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-jrAGrp"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-kEjbxe eDKgHQ"
        >
          <button
            class="sc-gsTCUz iulVCQ"
            disabled=""
            type="button"
          >
            Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-eCssSg jJQcwm"
    >
      <div
        class="sc-hHftDr hXZiDL"
      >
        <div
          class="sc-crrsfI dvOODA"
        >
          <div
            class="sc-dIUggk hZaEGa"
          >
            Undervote
          </div>
          <p>
            This last scanned sheet 
            <strong>
              was not tabulated
            </strong>
            .
          </p>
          <h4>
            Original Ballot Scan
          </h4>
          <p>
            Remove ballot and create a duplicate ballot for the Resolution Board to review.
            <br />
            <button
              class="sc-gsTCUz ftrorQ"
              type="button"
            >
              Original Ballot Removed
            </button>
          </p>
          <h4>
            Duplicate Ballot Scan
          </h4>
          <p>
            Confirm ballot sheet was reviewed by the Resolution Board and tabulate as ballot with issue which could not be determined.
            <br />
            <button
              class="sc-gsTCUz ftrorQ"
              type="button"
            >
              Tabulate Duplicate Ballot
            </button>
          </p>
        </div>
        <div
          class="sc-dmlrTW esDPKT"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-kstrdz kvxcls"
    >
      <div
        class="sc-bqyKva kbFFdu"
      >
        Scanner ID: 
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-bqyKva kbFFdu"
      >
        <strong>
          General Election
        </strong>
         — 
        Tuesday, November 3, 2020
         
        — 
        Franklin County
        ,
         
        State of Hamilton
         
        — Election Hash:
         
        <strong>
          2f6b1553c7
        </strong>
      </div>
    </div>
  </div>
</div>
`;

exports[`says the sheet is unreadable if it is 1`] = `
<div>
  <div
    class="sc-dQppl CqIxD"
  >
    <div
      class="sc-gKsewC eUhhMQ"
    >
      <div
        class="sc-iBPRYJ hPAooK"
      >
        <div
          class="sc-fubCfw hAIFcM"
        >
          <div
            class="sc-pFZIQ Korzq"
          >
            Voting
            <span>
              Works
            </span>
          </div>
          <div
            class="sc-jrAGrp"
          >
            VxCentralScan
          </div>
        </div>
        <div
          class="sc-kEjbxe eDKgHQ"
        >
          <button
            class="sc-gsTCUz bQMNvi"
            type="button"
          >
            Confirm Ballot Removed and Continue Scanning
          </button>
        </div>
      </div>
    </div>
    <main
      class="sc-eCssSg jJQcwm"
    >
      <div
        class="sc-hHftDr hXZiDL"
      >
        <div
          class="sc-crrsfI dvOODA"
        >
          <div
            class="sc-dIUggk hZaEGa"
          >
            Unreadable
          </div>
          <p>
            This last scanned sheet 
            <strong>
              was not tabulated
            </strong>
            .
          </p>
          <p>
            There was a problem reading the ballot. Remove ballot and reload in the scanner to try again.
          </p>
          <p>
            If the error persists remove ballot and create a duplicate ballot for the Resolution Board to review.
          </p>
        </div>
        <div
          class="sc-dmlrTW esDPKT"
        >
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/front/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
          <div
            style="position: relative;"
          >
            <img
              alt="front"
              src="/back/url"
              style="max-width: 100%; max-height: 87vh;"
            />
          </div>
        </div>
      </div>
    </main>
    <div
      class="sc-kstrdz kvxcls"
    >
      <div
        class="sc-bqyKva kbFFdu"
      >
        Scanner ID: 
        <strong>
          0000
        </strong>
      </div>
      <div
        class="sc-bqyKva kbFFdu"
      >
        <strong>
          General Election
        </strong>
         — 
        Tuesday, November 3, 2020
         
        — 
        Franklin County
        ,
         
        State of Hamilton
         
        — Election Hash:
         
        <strong>
          2f6b1553c7
        </strong>
      </div>
    </div>
  </div>
</div>
`;
